# Game-Of-Life

./: CMakeLists.txt  README.md
src/: main.cpp
src/controller/: controller.cpp  controller.h  interface.cpp  interface.h  settings.h
src/controller/button/: button.cpp  button.h
src/controller/texture_manager/: texture_manager.cpp  texture_manager.h
src/model/: game_model.cpp  game_model.h  game_processor.h
src/view/: cell.cpp  cell.h  interface.cpp  interface.h
src/view/texture_manager/: texture_manager.cpp
src/view/widgets/: button.cpp  button.h  cell.cpp  cell.h  widget.cpp  widget.h
